<resources>
    <!-- App and activity labels -->
    <string name="app_name">The Movie App</string>
    <string name="preferences_label">Preferences</string>
    <string name="detail_label">Movie details</string>

    <!-- - - - - -  - - - -->
    <!--  Menus Labels  - -->
    <!-- - - - - -  - - - -->
    <string name="action_preferences">Preferences</string>
    <string name="action_mark_favourite">Mark as favourite</string>
    <string name="action_share">Share</string>

    <!-- - - - - -  - - - -->
    <!-- Error messages   -->
    <!-- - - - - -  - - - -->
    <string name="error_message_no_connection">No internet connection</string>
    <string name="error_message_general">An error has occurred.\nPlease try again</string>


    <!-- - - - - -  - - - -->
    <!--   Preferences    -->
    <!-- - - - - -  - - - -->
    <!-- Order by key and label -->
    <string name="order_by_label">Show movies:</string>
    <string name="order_by_key" translatable="false">sort_by</string>
    <string name="order_by_default">@string/order_by_popularity_label</string>

    <!-- Order by - labels -->
    <string name="order_by_popularity_label">Popular</string>
    <string name="order_by_rating_label">Top rated</string>
    <string name="order_by_favourite_label">Favourite</string>

    <!-- Order by - values -->
    <string name="order_by_popularity_value" translatable="false">popular</string>
    <string name="order_by_rating_value" translatable="false">top_rated</string>
    <string name="order_by_favourite_value" translatable="false">favourite</string>

    <!-- Sync periodically key and label -->
    <string name="sync_periodically_label">Sync data periodically</string>
    <string name="sync_periodically_key" translatable="false">sync_data</string>

    <!-- Sync periodically summary -->
    <string name="sync_periodically_summary_on">Sync data every 3 hours</string>
    <string name="sync_periodically_summary_off">Do not automatically sync data </string>


    <!-- - - - - -  - - - -->
    <!--  Detail layout   -->
    <!-- - - - - -  - - - -->
    <!-- Release date -->
    <string name="detail_release_date_title">Release Date</string>
    <string name="detail_release_date_placeholder">05/10/1981</string>

    <!-- Genres -->
    <string name="detail_genre_title">Genre</string>
    <string name="detail_genre_placeholder">Genres</string>

    <!-- Overview -->
    <string name="detail_overview_title">Overview</string>
    <string name="detail_overview_placeholder">Overview</string>

    <!-- Title -->
    <string name="detail_title_placeholder">Pirates of the Caribbean: The Curse of the Black Pearl</string>

    <!-- Trailers & Reviews -->
    <string name="detail_trailer_tile">Trailers</string>
    <string name="detail_reviews_tile">Reviews</string>
    <string name="detail_no_trailers">No trailers available</string>
    <string name="detail_no_reviews">No reviews available</string>
    <string name="detail_trailer_name_placeholder">Official Trailer 1</string>
    <string name="detail_review_author_placeholder">John M.</string>
    <string name="detail_review_content_placeholder">This is a sample trailer review text to act as a
        placeholder</string>

    <!-- Genre Array -->
    <string name="genre_action">Action</string>
    <string name="genre_adventure">Adventure</string>
    <string name="genre_animation">Animation</string>
    <string name="genre_comedy">Comedy</string>
    <string name="genre_crime">Crime</string>
    <string name="genre_documentary">Documentary</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_family">Family</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_history">History</string>
    <string name="genre_horror">Horror</string>
    <string name="genre_music">Music</string>
    <string name="genre_mystery">Mystery</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_science_fiction">Science Fiction</string>
    <string name="genre_tv_movie">TV Movie</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_war">War</string>
    <string name="genre_western">Western</string>
</resources>
