<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.themovieapp.DetailActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="@+id/tv_movie_title"
                app:layout_constraintTop_toTopOf="@+id/tv_movie_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <ImageView
                android:id="@+id/iv_poster_image"
                android:layout_width="160dp"
                android:layout_height="240dp"
                app:srcCompat="@drawable/no_poster"
                android:scaleType="centerCrop"
                android:background="@drawable/borders"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/margin_medium"
                android:focusable="true"
                android:focusableInTouchMode="true"/>

            <TextView
                android:id="@+id/tv_movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                app:layout_constraintLeft_toRightOf="@+id/iv_poster_image"
                app:layout_constraintRight_toRightOf="@+id/view"
                app:layout_constraintTop_toTopOf="@+id/iv_poster_image"
                tools:text="@string/detail_title_placeholder"
                style="@style/detail_main_titles"/>

            <RatingBar
                android:id="@+id/rb_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="5"
                android:scaleY="0.5"
                android:scaleX="0.5"
                app:layout_constraintLeft_toRightOf="@+id/iv_poster_image"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_movie_title"
                android:theme="@style/detail_rating_Bar"/>

            <TextView
                android:id="@+id/tv_release_date_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/tv_movie_title"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingStart="@dimen/margin_medium"
                style="@style/detail_titles"
                android:text="@string/detail_release_date_title"
                app:layout_constraintTop_toBottomOf="@+id/rb_rating"/>

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/tv_release_date_title"
                app:layout_constraintRight_toRightOf="parent"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingRight="@dimen/margin_medium"
                style="@style/detail_text"
                tools:text="@string/detail_release_date_placeholder"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/tv_release_date_title"/>

            <TextView
                android:id="@+id/tv_genre_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/tv_release_date"
                android:paddingStart="@dimen/margin_medium"
                android:paddingLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                style="@style/detail_titles"
                android:text="@string/detail_genre_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_release_date"/>

            <TextView
                android:id="@+id/tv_genre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="@+id/tv_genre_title"
                app:layout_constraintRight_toRightOf="parent"
                android:paddingLeft="@dimen/margin_medium"
                android:paddingRight="@dimen/margin_medium"
                style="@style/detail_text"
                tools:text="@string/detail_genre_placeholder"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/tv_genre_title"/>

            <TextView
                android:id="@+id/tv_overview_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/iv_poster_image"
                app:layout_constraintLeft_toLeftOf="@+id/iv_poster_image"
                android:layout_marginTop="@dimen/margin_medium"
                style="@style/detail_titles"
                android:text="@string/detail_overview_title"/>

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/detail_text"
                tools:text="@string/detail_overview_placeholder"
                android:paddingEnd="@dimen/margin_medium"
                android:paddingRight="@dimen/margin_medium"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview_title"
                app:layout_constraintLeft_toLeftOf="@+id/iv_poster_image"
                app:layout_constraintRight_toRightOf="parent"/>

            <View
                android:id="@+id/trailers_banner"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/detail_secondary_titles"
                app:layout_constraintBottom_toBottomOf="@+id/tv_trailers_title"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_trailers_title"/>

            <TextView
                android:id="@+id/tv_trailers_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="@dimen/margin_large"
                android:text="@string/detail_trailer_tile"
                style="@style/detail_main_titles"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_trailers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_trailers_title"/>

            <View
                android:id="@+id/reviews_banner"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/detail_secondary_titles"
                app:layout_constraintBottom_toBottomOf="@+id/tv_reviews_title"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_reviews_title"/>

            <TextView
                android:id="@+id/tv_reviews_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/rv_trailers"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:text="@string/detail_reviews_tile"
                style="@style/detail_main_titles"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_reviews"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_reviews_title"/>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>
</layout>